--- a/html/index.html
+++ b/html/index.html
@@ -4,19 +4,16 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="../src/css/style.css" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase.js"></script>
-  <script src="../src/js/index.js"></script>
+  
 </head>
 
 <body>
   <!--TODO: CSS PERO FUERTE, HAY COSAS CON ESTILOS QEU NO EXISTEN QUE SON DE LO DE FRAN Y OSCARES QUE HAY QUE CAMBIAR-->
   <header id="main-header">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg ">
       <a class="navbar-brand weeb" type="button"  href="">MANGAWEEB</a>
 
-      <div class="flex-list collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="flex-list collapse navbar-collapse">
         <ul >
           <li >
             <center><a class="nav-link navbarfont" type="button" href="" >Home</a></center>
@@ -29,7 +26,7 @@
             <li>
               <a class="nav-link navbarfont" href="#signup-modal" id="signup" data-toggle="modal" data-target="#signup-modal">Registrarse</a>
             </li>
-            <li class="nav-item" style="float:right">
+            <li class="nav-item" >
               <a class="nav-link navbarfont" href="Distribuidoras.html">Distribuidoras</a>
             </li>
             <li>
@@ -114,6 +111,10 @@
         </div>
       </div>
     </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase.js"></script>
+  <script src="../src/js/index.js"></script>
   <!-- Latest compiled and minified CSS -->
 </body>
 
