--- a/html/distribuidoras.html
+++ b/html/distribuidoras.html
@@ -6,8 +6,8 @@
         </title>
 <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="style.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script><script src="https://www.gstatic.com/firebasejs/7.6.1/firebase.js"></script><script src="index.js"></script>
+<link rel="stylesheet" href="../src/css/style.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script><script src="https://www.gstatic.com/firebasejs/7.6.1/firebase.js"></script><script src="../src/js/index.js"></script>
 </head>
 <BODY>
 <header id="main-header">
@@ -54,10 +54,70 @@
 </div>
 </nav>
 </header>
-<h2> MANGAWEEB.CO </h2>
 <br>
 <table>
-<td><img src="../img/placeholder.jpg"></td><td>PLACEHOLDER, THE MANGA<br>LA VOLUNTAD DE DIOS</td>
+<td>SHUEISHA<br>
+<img src="https://dragonball.center/files/module_dbc/fabricantes/lkyg698.jpg" height="200" width="300"><br>Founded in 1925<p>Magazines:</p>
+<li>WEEKLY SHOUNEN JUMP</li>
+<li>MONTHLY SHOUNEN JUMP</li>
+<li>WEEKLY YOUNG JUMP</li>
+<li>RIBBON</li>
+<p>Notable Mangas:</p>
+<li>NARUTO</li>
+<li>BLEACH</li>
+<li>Black Clover</li>
+<li>HunterxHunter</li>
+<p>Notable Mangakas:</p>
+<li>Pancakeman</li>
+<li>Kubo</li>
+<li>Oda</li>
+<li>Kishimoto</li>
+</td>
+<br>
+<td>Square Enix<br>
+<img src="https://theworldwentaway.files.wordpress.com/2012/10/square-enix-logo-e1295410088534.jpg?w=800" height="200" width="300"><br>Founded in 2003<p>Magazines:</p>
+<li>GANGAN COMICS </li>
+<p>Notable Mangas:</p>
+<li>Fullmetal Alchemist</li>
+<li>Soul Eater</li>
+<li>Kingdom Hearts</li>
+<p>Notable Mangakas:</p>
+<li>Arakawa</li>
+<li>Okubo</li>
+</td>
+<br>
+<td>Mag Garden<br>
+<img src="https://upload.wikimedia.org/wikipedia/commons/5/5c/MAG-garden_logo.png" height="200" width="300"><br>Founded in 2001<p>Magazines:</p>
+<li>Monthly Comic Avarus</li>
+<li>Monthly Comic Garden</li>
+<li>Eden</li>
+<p>Notable Mangas:</p>
+<li>Sketchbook</li>
+<li>Shimoneta terrorist</li>
+<li>Psycho Pass</li>
+<p>Notable Mangakas:</p>
+<li>Akagi</li>
+<li>Totan Kobako</li>
+<li>Hikaru Miyoshi</li>
+</td>
+<br>
+<td>Akita Shoten<br>
+<img src="https://upload.wikimedia.org/wikipedia/commons/4/48/Akita_Shoten_logo.png" height="200" width="300"><br>Founded in 1948<p>Magazines:</p>
+<li>Bessatsu Shōnen Champion</li>
+<li>Champion Red</li>
+<li>Young Champion</li>
+<li>Princess</li>
+<p>Notable Mangas:</p>
+<li>Saint Seiya</li>
+<li>Devilman G</li>
+<li>Aki Sora</li>
+<li>Kuro Bara Alice</li>
+<p>Notable Mangakas:</p>
+<li>Masahiro Itosugi</li>
+<li>Nagai</li>
+<li>Kuori</li>
+</td>
+<br>
 </table>
 <div class=" modal fade" role="dialog" id="login-modal">
 <div class="modal-dialog modal-dialog-centered">
