--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="../src/css/style.css" />
-  
+
 </head>
 
 <body>
@@ -51,7 +51,7 @@
     </header>
     <br>
 
-    <div class="flexlist">
+    <div class="flexlist mbody">
       <ul class="mangalist" id="main-body">
       </ul>
     </div>
